@@ -1446,6 +1446,39 @@
                                         <property name="y_options"></property>
                                       </packing>
                                     </child>
+                    <child>
+                      <object class="GtkLabel" id="label_source_label">
+                        <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Source:&lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">6</property>
+                        <property name="bottom_attach">7</property>
+                        <property name="x_options">GTK_FILL</property>
+                        <property name="y_options"/>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel" id="label_source">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
+                        <property name="use_markup">True</property>
+                        <property name="selectable">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">6</property>
+                        <property name="bottom_attach">7</property>
+                        <property name="x_options">GTK_FILL</property>
+                        <property name="y_options"/>
+                      </packing>
+                    </child>
+
                                     <child>
                                       <object class="GtkLabel" id="label_maintainer">
                                         <property name="visible">True</property>
@@ -1463,6 +1496,7 @@
                                         <property name="y_options"></property>
                                       </packing>
                                     </child>
+
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
