@@ -45,6 +45,7 @@ synaptic (0.80) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * ensure external helpers are runs as the user uid
   * strip strings properly in a markings file, thanks to palasso
+  * show source package name in the details (closes: #692528)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 12 Jul 2012 21:22:15 +0200
 
